tests/ui/lifetimes/missing-lifetime-in-assoc-type-4.stderr
error: missing lifetime in associated type
  --> $DIR/missing-lifetime-in-assoc-type-4.rs:5:17
   |
LL |     type Item = &T;
   |                 ^ this lifetime must come from the implemented type
   |
note: in the trait the associated type is declared without lifetime parameters, so using a borrowed type for them requires that lifetime to come from the implemented type
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
help: add a lifetime to the impl block and use it in the self type and associated type
   |
LL ~ impl<'a> IntoIterator for &'a S {
LL ~     type Item = &'a T;
   |

error[E0195]: lifetime parameters or bounds on associated type `IntoIter` do not match the trait declaration
  --> $DIR/missing-lifetime-in-assoc-type-4.rs:7:18
   |
LL |     type IntoIter<'a> = std::collections::btree_map::Values<'a, i32, T>;
   |                  ^^^^ lifetimes do not match associated type in trait
   |
  --> $SRC_DIR/core/src/iter/traits/collect.rs:LL:COL
   |
   = note: lifetimes in impl do not match this associated type in trait

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0195`.
